--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1",
+        "fastify": "^3.19.2",
         "sequelize": "^6.6.5",
         "sqlite3": "^5.0.2",
         "yup": "^0.32.9"
